tests/NormalTests/paczka1/fuzzy1/55100882.err
Error in line 8: 0uR5QMr3 S207 50,9
Error in line 5: nrM9 A353 90,8
Error in line 11: S210 S207 10,6
Error in line 28: nrM9 A369 4,1
